# passacre

./: .coveragerc  .gitattributes  .gitignore  .travis.install  .travis.yml  COPYING  MANIFEST.in  README  README.rst  TODO.rst  _libpassacre.py  config.yaml.example  multibase.py  passacre.yaml.example  setup.cfg  setup.py  test_multibase.py  tox.ini  vcversioner.py
.travis/: setup.sh
admin/: compile-grammar.py  generate-completions.py  travis-build-matrix.py  wheels.py
contrib/: launchd-passacre.plist  passacre-applescript  passacre-completion.zsh  passacre.fish  yaml2sqlite.py
docker/: build-linux-backend-root.sh  build-linux-backend.docker  build-linux-backend.sh  build-linux-setup.sh  build-linux32-backend.docker  build-linux64-backend.docker  docker-compose.yml
docs/: Makefile  commands.rst  conf.py  config.rst  faq.rst  features.rst  index.rst  requirements.txt  schema.rst
docs/_static/: railroad-diagrams.css
docs/schema/: diagram.html  diagram.txt  railroad-diagrams.css  railroad-diagrams.js  schema_test.py
libpassacre/: .gitignore  CMakeLists.txt  Cargo.toml  build.rs  cffi_build.py  libpassacre.pc.in  passacre.c  passacre.capnp  passacre.h  setup.py
libpassacre/keccak/: Keccak-avr8-settings.h  Keccak-compact-test.c  Keccak-compact8-test.c  Keccak-inplace32BI-armgcc-ARMv7M.s  Keccak-simple-test.c  KeccakF-1600-avr8asm-compact.s  KeccakF-1600-avr8asm-fast.s  KeccakSponge.c  KeccakSponge.h  Keccakc1024-crypto_hash-inplace-armgcc-ARMv7A-NEON.s  Keccakc512-crypto_hash-inplace-armgcc-ARMv7A-NEON.s  mainOptimized.c  timing.c
libpassacre/scrypt/: sysendian.h
libpassacre/skein/: skein.c  skeinApi.c  skeinBlockNo3F.c  skein_block.c  skein_port.h  threefish1024Block.c  threefish256Block.c  threefish512Block.c
libpassacre/src/: c.rs  deps.rs  error.rs  lib.rs  multibase.rs  passacre.rs  rpc.rs  util.rs
passacre/: __init__.py  __main__.py  _argparse.py  _backend_capnp.py  _jsonmini.py  _libpassacre.py  _libpassacre_impl.py  _ometa.py  _passacre.capnp  _version.py  application.py  compat.py  completion.py  config.py  features.py  generator.py  jsonmini.parsley  jsonmini.py  multibase.py  schema.py  schema.sql  util.py  yaml2sqlite.py
passacre-backend/: .gitignore  CMakeLists.txt  Cargo.toml  ChooseCStandard.cmake  README.rst  build.rs  libpassacre-config.h.in  setup.py
passacre-backend/keccak/: Keccak-avr8-test.c  Keccak-compact-settings.h  Keccak-compact8-settings.h  Keccak-inplace-minimal-test.c  Keccak-inplace-test.c  Keccak-inplace32BI-armgcc-ARMv6M.s  Keccak-inplace32BI-armgcc-ARMv7A.s  Keccak-simple-settings.h  KeccakF-1600-armcc.s  KeccakF-1600-opt32.c  KeccakF-1600-reference.h  KeccakF-1600-reference32BI.c  KeccakSponge.h  mainARM.c  mainReference.c
passacre-backend/scrypt/: crypto_scrypt-sse.c  sha256.c
passacre-backend/skein/: skein.h  skeinApi.h  threefishApi.c  threefishApi.h
passacre-backend/src/: deps.rs  lib.rs  multibase.rs  rpc.rs
passacre-backend/src/wordlists/: diceware_en.list  mod.rs  pgp_even.list  pgp_odd.list  rfc2289.list
passacre-metapackage/: README.rst  _version.py  setup.cfg  setup.py
passacre/agent/: commands.py  main.py  pencrypt.py  protocol.py
passacre/agent/test/: test_main.py  test_pencrypt.py  test_protocol.py
passacre/test/: test_application.py  test_compat.py  test_completion.py  test_config.py  test_generator.py  test_jsonmini.py  test_libpassacre.py  test_multibase.py  test_schema.py  util.py
passacre/test/data/: always-confirm.sqlite  always-hash.sqlite  keccak.sqlite  keccak.yaml  no-words.sqlite  nonextant-words.sqlite  skein.sqlite  skein.yaml  tahoe.sqlite  words2
passacre/test/data/keccak-sqlite/: .passacre.sqlite
passacre/test/data/keccak-yaml/: .passacre.yaml
passacre/test/data/skein-sqlite/: .passacre.sqlite  words
passacre/test/data/skein-yaml/: .passacre.yaml
