# Copyright (c) Aaron Gallagher <_@habnab.it>
# See COPYING for details.

[package]
name = "passacre"
version = "0.0.1"
authors = ["Aaron Gallagher <_@habnab.it>"]
build = "build.rs"

[dependencies]
libc = "0.2.18"
ramp = "0.3.3"
rand = "0.3.15"

[dev-dependencies]
fnconcat = "0.2.1"

[lib]
name = "passacre"
crate-type = ["staticlib"]

[features]
testing-checks = []
