# Copyright (c) Aaron Gallagher <_@habnab.it>
# See COPYING for details.

[package]
name = "passacre"
version = "0.0.1"
authors = ["Aaron Gallagher <_@habnab.it>"]
build = "build.rs"
publish = false

[build-dependencies]
capnpc = "0.8"

[dependencies]
capnp = "0.8.17"
capnp-rpc = "0.8.3"
gj = "0.2"
gjio = "0.1"
libc = "0.2.18"
ramp = "0.5.9"
rand = "0.3.15"

[dev-dependencies]
test-case = "1.2.0"

[lib]
name = "passacre"

[features]
testing-checks = []
